--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -59,5 +59,5 @@ netdata_claim_rooms: []
 #  - 23456789-abcd-ef01-2344-56789abcdef0 # Servers
 #  - ...
 
-# Local directory for Netdata configuration backup
+# Local directory for Netdata configuration backup & info
 netdata_config_local_path: "{{ playbook_dir }}/config/netdata/{{ inventory_hostname }}"
